update sentiment-analysis component template

--- a/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
@@ -30,28 +30,28 @@
                 Este análisis muestra la experiencia que tiene el usuario al manejar el chat de HP, contemplamos como:
                 <ul class="scale-container">
                     <li>
-                        <i class="far fa-sad-tear"></i>
+                        <div class="legend-square"></div>
                         <span>Mala experiencia: </span>
                         <span>Poca interacción de frecuentemente termina en el abandono</span>
                     </li>
                     <li>
-                        <i class="far fa-meh"></i>
+                        <div class="legend-square"></div>
                         <span>Insatisfacción:</span>
                         <span>Mensajes cortantes y sencillos que derivan en perder contacto con el agente</span>
                     </li>
                     <li>
-                        <i class="far fa-smile"></i>
+                        <div class="legend-square"></div>
                         <span>Satisfacción:</span>
                         <span> Mensajes naturales de los usuarios donde el agente responde la inquietud</span>
                     </li>
                     <li>
-                        <i class="far fa-grin-wink"></i>
+                        <div class="legend-square"></div>
                         <span>Agradecimiento:</span>
                         <span>Mensajes donde el cliente menciona tácitamente que el chat y/o atención fue de
                             ayuda</span>
                     </li>
                     <li>
-                        <i class="far fa-grin-stars"></i>
+                        <div class="legend-square"></div>
                         <span>Excelente experiencia:</span>
                         <span>Mensajes donde el cliente expresa explícitamente su agradecimiento</span>
                     </li>
