--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,11 +1,13 @@
 <!-- Sidenav -->
 <app-sidebar></app-sidebar>
-<div class="main-content mb-6">
-  <!-- Top navbar -->
-  <app-navbar></app-navbar>
-  <!-- Pages -->
-  <router-outlet></router-outlet>
-  <!-- <div class="container-fluid">
-    <app-footer></app-footer>
-  </div> -->
+<div id="print-section">
+  <div class="main-content mb-6">
+    <!-- Top navbar -->
+    <app-navbar></app-navbar>
+    <!-- Pages -->
+    <router-outlet></router-outlet>
+    <!-- <div class="container-fluid">
+      <app-footer></app-footer>
+    </div> -->
+  </div>
 </div>
