--- a/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
+++ b/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
@@ -435,7 +435,7 @@
                     </div>
                     <div class="card-body">
                         <app-chart-heat-map [data]="audience?.weekdayAndHour" name="omnichat-weekday-sesions"
-                            height="100%" [status]="audienceReqStatus[5].reqStatus" categoryX="weekdayName">
+                            height="615px" [status]="audienceReqStatus[5].reqStatus" categoryX="weekdayName">
                         </app-chart-heat-map>
                     </div>
                 </div>
