--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <div class="dashboard-container mt-4">
 
-    <div class="container-fluid-lg" [hidden]="!title">
+    <div class="container-fluid-lg">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8" [hidden]="!title">
                 <p class="h2 text-xl">{{ title }}</p>
             </div>
-            <div class="col-4 text-right">
+
+            <div class="col-4 text-right" [ngClass]="{'col-12': !title}">
                 <button class="btn btn-outline-primary btn-sm" [useExistingCss]="true"
                     [printTitle]="printWindowTitle ? printWindowTitle : title" printSectionId="print-section" ngxPrint>
                     Imprimir
@@ -13,12 +14,15 @@
             </div>
         </div>
     </div>
-    <div class="filters-container container-fluid-lg" [hidden]="!showFilters">
-        <app-general-filters></app-general-filters>
-        <hr class="mt-3 mb-5">
-    </div>
 
-    <div class="container-fluid">
-        <router-outlet></router-outlet>
+    <div id="print-section">
+        <div class="filters-container container-fluid-lg" [hidden]="!showFilters">
+            <app-general-filters></app-general-filters>
+            <hr class="mt-3 mb-5">
+        </div>
+
+        <div class="container-fluid">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
