--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    .btn {
+        @media print {
+            display: none;
+        }
+    }
+
     .filters-container {
         @media screen and (min-width: 575px) {
             background: #F8F9FE;
