update download button style in dashboard component

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
             </div>
 
             <div class="col-4 text-right" [ngClass]="{'col-12': !title}">
-                <button class="btn btn-outline-primary btn-sm" [useExistingCss]="true"
+                <button class="btn btn-outline-primary" [useExistingCss]="true"
                     [printTitle]="printWindowTitle ? printWindowTitle : title" printSectionId="print-section" ngxPrint>
-                    Imprimir
+                    Descargar
                 </button>
             </div>
         </div>
