--- a/src/app/modules/users-mngmt/pages/activity-register/activity-register.component.html
+++ b/src/app/modules/users-mngmt/pages/activity-register/activity-register.component.html
@@ -1,5 +1,4 @@
-<div class="row mt-4">
-    <div class="col-12">
-        <p class="h2 mb-5 text-xl">Registro de actividad</p>
-    </div>
+<div class="iframe-container">
+    <iframe src="https://datastudio.google.com/embed/reporting/a4431e7f-de72-47fe-af6b-bf45f5aa5384/page/p_056qrqeamc"
+        frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
