add i18n references to google-business-filters component

--- a/src/app/modules/dashboard/components/google-business-filters/google-business-filters.component.html
+++ b/src/app/modules/dashboard/components/google-business-filters/google-business-filters.component.html
@@ -2,16 +2,16 @@
 
     <!-- province -->
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="h4 mb-1">Provincia</small>
-        <mat-select [formControl]="provinces" multiple placeholder="Selecciona una Provincia" disableOptionCentering
-            [disabled]="provinceList.length < 1">
+        <small class="h4 mb-1">{{ 'filters.province' | translate }}</small>
+        <mat-select [formControl]="provinces" multiple [placeholder]="'filters.provincePh' | translate"
+            disableOptionCentering [disabled]="provinceList.length < 1">
             <div class="input-group input-group-alternative mb-1">
                 <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-search"></i></span>
                 </div>
                 <input class="form-control" [(ngModel)]="privinceFilter" matInput type="text"
                     (keyup)="filterFromList('provinces', 'province', $event.target.value)"
-                    placeholder="Buscar Provincia" [ngModelOptions]="{standalone: true}"
+                    [placeholder]="'filters.provinceSearchPh' | translate" [ngModelOptions]="{standalone: true}"
                     (keydown.space)="$event.stopPropagation()">
             </div>
             <mat-select-trigger>
@@ -24,14 +24,15 @@
                         : ''}}
                     </span>
                     <span *ngIf="provincesCounter > 1" class="example-additional-selection ml-1">
-                        (+ {{ provincesCounter === 2 ? 'otra' : 'otras' }}
+                        (+ {{ provincesCounter === 2 ? ('others.otherSingularF' | translate) : ('others.otherPluralF' |
+                        translate) }}
                         {{ provincesCounter === 2 ? '' : provincesCounter - 1 }} )
                     </span>
                 </div>
             </mat-select-trigger>
             <mat-option #allSelectedProvinces [value]="0" class="font-weight-bold"
                 (click)="toggleAllSelection('provinces', 'province')">
-                Todas
+                {{ 'others.allPluralF' | translate | titlecase }}
             </mat-option>
 
             <ng-container *ngFor="let province of provinceList">
@@ -40,34 +41,35 @@
                     <span class="option-name">{{ province.name }}</span>
                     <button type="button" class="btn btn-sm btn-secondary"
                         (click)="uniqueSelection('provinces', 'province', province)">
-                        Solamente
+                        {{ 'others.only' | translate | titlecase }}
                     </button>
                 </mat-option>
             </ng-container>
         </mat-select>
 
-        <small class="text-danger" *ngIf="provincesErrorMsg">
-            {{ provincesErrorMsg }}
+        <small class="text-danger"
+            *ngIf="provincesReqStatus !==3 && citiesReqStatus !==3 && (provinces?.value?.length < 1 && cities?.value?.length < 1) && (provinces.touched || cities.touched)">
+            {{ 'filters.provinceError1' | translate }}
         </small>
 
-        <small class="text-danger"
-            *ngIf="!provincesErrorMsg && !citiesErrorMsg && (provinces?.value?.length < 1 && cities?.value?.length < 1) && (provinces.touched || cities.touched)">
-            Selecciona al menos una Provincia o Ciudad
+        <small class="text-danger" *ngIf="provincesReqStatus === 3">
+            {{ 'filters.provinceError2' | translate }}
         </small>
     </div>
 
     <!-- city -->
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="h4 mb-1">Ciudad</small>
-        <mat-select [formControl]="cities" multiple placeholder="Selecciona una Ciudad" disableOptionCentering
+        <small class="h4 mb-1">{{ 'filters.city' | translate }}</small>
+        <mat-select [formControl]="cities" multiple [placeholder]="'filters.cityPh' | translate" disableOptionCentering
             [disabled]="cityList.length < 1">
             <div class="input-group input-group-alternative mb-1">
                 <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-search"></i></span>
                 </div>
                 <input class="form-control" [(ngModel)]="cityFilter" matInput type="text"
-                    (keyup)="filterFromList('cities', 'city', $event.target.value)" placeholder="Buscar Ciudad"
-                    [ngModelOptions]="{standalone: true}" (keydown.space)="$event.stopPropagation()">
+                    (keyup)="filterFromList('cities', 'city', $event.target.value)"
+                    [placeholder]="'filters.citySearchPh' | translate" [ngModelOptions]="{standalone: true}"
+                    (keydown.space)="$event.stopPropagation()">
             </div>
             <mat-select-trigger>
                 <div class="select-value-container">
@@ -79,14 +81,15 @@
                         : ''}}
                     </span>
                     <span *ngIf="citiesCounter > 1" class="example-additional-selection ml-1">
-                        (+ {{ citiesCounter === 2 ? 'otra' : 'otras' }}
+                        (+ {{ citiesCounter === 2 ? ('others.otherSingularF' | translate ): ('others.otherPluralF' |
+                        translate) }}
                         {{ citiesCounter === 2 ? '' : citiesCounter - 1 }} )
                     </span>
                 </div>
             </mat-select-trigger>
             <mat-option #allSelectedCities [value]="0" class="font-weight-bold"
                 (click)="toggleAllSelection('cities', 'city')">
-                Todas
+                {{ 'others.allPluralF' | translate | titlecase }}
             </mat-option>
 
             <ng-container *ngFor="let city of cityList">
@@ -95,14 +98,14 @@
                     <span class="option-name">{{ city.name }}</span>
                     <button type="button" class="btn btn-sm btn-secondary"
                         (click)="uniqueSelection('cities', 'city', city)">
-                        Solamente
+                        {{ 'others.only' | translate | titlecase }}
                     </button>
                 </mat-option>
             </ng-container>
         </mat-select>
 
-        <small class="text-danger" *ngIf="citiesErrorMsg">
-            {{ citiesErrorMsg }}
+        <small class="text-danger" *ngIf="citiesReqStatus === 3">
+            {{ 'filters.cityError1' | translate }}
         </small>
     </div>
 
@@ -110,10 +113,10 @@
     <div class="col-12 col-lg-6 mb-4">
         <div class="button-container">
             <button type="button" class="btn btn-primary"
-                [disabled]="!provincesErrorMsg && !citiesErrorMsg && (provinces?.value?.length < 1 && cities?.value?.length < 1)"
+                [disabled]="provincesReqStatus !== 3 && citiesReqStatus !== 3 && (provinces?.value?.length < 1 && cities?.value?.length < 1)"
                 (click)="applyFilters()">
                 <i class="fas fa-filter mr-2"></i>
-                Filtrar
+                {{ 'filters.filter' | translate }}
             </button>
         </div>
     </div>
@@ -121,15 +124,15 @@
     <!-- shared errors -->
     <div class="col-12 text-muted">
         <small *ngIf="provinceList.length < 1 && cityList.length > 0 && provincesReqStatus > 1 && citiesReqStatus > 1">
-            No se encontraron Provincias para este Retailer
+            {{ 'filters.provinceError3' | translate }}
         </small>
 
         <small *ngIf="provinceList.length > 0 && cityList.length < 1 && provincesReqStatus > 1 && citiesReqStatus > 1">
-            No se encontraron Ciudades para este Retailer
+            {{ 'filters.cityError2' | translate }}
         </small>
 
         <small *ngIf="provinceList.length < 1 && cityList.length < 1 && provincesReqStatus > 1 && citiesReqStatus > 1">
-            No se encontraron Provincias ni Ciudades para este Retailer
+            {{ 'filters.cityError3' | translate }}
         </small>
     </div>
 </div>
